# qcli

./: .clang-format  CHANGES.md  CMakeLists.txt  QUICK_REFERENCE.md  REFACTOR_SUMMARY.md  SUBCMD_GUIDE.md  autocrlf.hpp  cmdmgr.hpp  demo.cpp  main.c  main.cpp  qcli.c  qcli.h  qshell.cpp  qshell.h  ringbuf.c  ringbuf.h
